# free-the-xlsx

./: .gitignore  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  README.md  excel_processor.py  excel_processor.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
