[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel-processor"
version = "0.1.0"
description = "엑셀 파일을 LLM이 읽기 좋은 다양한 형식(CSV/JSON/Markdown)으로 변환하는 도구"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "xlwings>=0.30.0",
    "pandas>=2.0.0",
    "click>=8.0.0",
    "tabulate>=0.9.0"  # Markdown 테이블 생성을 위해 필요
]

[project.scripts]
excel-processor = "excel_processor:process_excel_files"

[tool.hatch.build.targets.wheel]
packages = ["excel_processor.py"] 